<resources>
    <string name="app_name">CookApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cook App</string>
    <string name="nav_header_version">1.0.0</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_last_meals">Last Meals</string>
    <string name="menu_category">Categories</string>
    <string name="menu_favourite">Favorites</string>
    <string name="menu_about_app">About application</string>

    <string name="home_second">Home Second</string>

    <string name="about_app">This is a mobile library with over 200 simple and tasty recipes.
        Recipes of different categories like beef, breakfast, chicken, dessert, goat and etc.</string>
</resources>
