<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.cookapp.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_last_meals"
        android:name="com.example.cookapp.ui.lastMeal.LastFragment"
        android:label="@string/menu_last_meals"
        tools:layout="@layout/fragment_last" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.cookapp.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.cookapp.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favourite" />
    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.example.cookapp.ui.AboutAppFragment"
        android:label="@string/menu_about_app" />
</navigation>